--- a/ProyectoFinal_MVC/ProyectoFinal_MVC/appsettings.json
+++ b/ProyectoFinal_MVC/ProyectoFinal_MVC/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "WebConnectionString": "Data Source=DESKTOP-9F98KRN\\SQLEXPRESS;Initial Catalog=Web21DB;Integrated Security=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
